[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Menu/DiabloHeavy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu/Options.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Menu/DiabloLight.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_video" type="Button" parent="."]
margin_left = 150.0
margin_top = 300.0
margin_right = 450.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 2 )
text = "Video"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_audio" type="Button" parent="."]
margin_left = 500.0
margin_top = 300.0
margin_right = 800.002
margin_bottom = 330.0
custom_fonts/font = SubResource( 3 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_contorls" type="Button" parent="."]
margin_left = 850.0
margin_top = 300.0
margin_right = 1150.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 4 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_back" type="Button" parent="."]
margin_left = 1500.0
margin_top = 300.0
margin_right = 1800.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
